<resources>
    <string name="app_name">PollinationID</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pollinator_id">Pollinator ID</string>
    <string name="hotel_id">Hotel ID</string>
    <string name="pollinator_categories">Pollinator Categories</string>
    <string name="alfalfa_leafcutter_bee">Alfalfa LeafCutter Bee</string>
    <string name="bees">Bees</string>
    <string name="apical_leafcutter_bee">Apical LeafCutter Bee</string>
    <string name="beatles">Beatles</string>
    <string name="beetles">Beetles</string>
    <string name="lady_bug">Lady Bug</string>
    <string name="bark_centipede">Bark Centipede</string>
    <string name="centipedes_and_millipedes">Centipedes and Millipedes</string>
    <string name="centipedes">Centipedes</string>
    <string name="eastern_calligrapher">Eastern Calligrapher</string>
    <string name="flies">Flies</string>
    <string name="hoverflies">Hoverflies</string>
    <string name="explore">Explore</string>
    <string name="textview">TextView</string>
    <string name="recycler_1_title_text">Recycler 1 Title Text</string>
    <string name="scaly_bee_fly">Scaly Bee Fly</string>
    <string name="margined_calligrapher">Margined Calligrapher</string>
    <string name="common_barklice">Common Barklice</string>
    <string name="brown_lacewings">Brown Lacewings</string>
    <string name="green_lacewings">Green Lacewings</string>
    <string name="spiders">Spiders</string>
    <string name="wasps">Wasps</string>
    <string name="american_grass_spider">American Grass Spider</string>
    <string name="harvestmen">Harvestmen</string>
    <string name="jumping_spiders">Jumping Spiders</string>
    <string name="carrot_wasps">Carrot Wasps</string>
    <string name="four_toothed_mason_wasp">Four-Toothed Mason Wasp</string>
    <string name="metallic_bluish_green_cucukoo_wasp">Metallic Bluish Green Cucukoo Wasp</string>
    <string name="mexican_grass_carrying_wasp">Mexican Grass-Carrying Wasp</string>
    <string name="bellflower_resin_bee">Bellflower Resin Bee</string>
    <string name="blue_orchard_mason_bee">Blue Orchard Mason Bee</string>
    <string name="bufflehead_mason_bee">Bufflehead Mason Bee</string>
    <string name="common_eastern_bumblebee">Common Eastern Bumblebee</string>
    <string name="cuckoo_bees">Cuckoo Bees</string>
    <string name="cuckoo_leafcutter_bees">Cuckoo Leafcutter Bees</string>
    <string name="dwarf_mason_bee">Dwarf Mason Bee</string>
    <string name="eastern_carpenter_bee">Eastern Carpenter Bee</string>
    <string name="european_wool_carder_bee">European Wool-Carder Bee</string>
    <string name="flat_tailed_leafcutter_bee">Flat-Tailed Leafcutter Bee</string>
    <string name="hornfaced_bee">Hornfaced Bee</string>
    <string name="leafcutter_bees">Leafcutter Bees</string>
    <string name="maine_blueberry_bee">Maine Blueberry Bee</string>
    <string name="mason_bees">Mason Bees</string>
    <string name="modest_masked_bee">Modest Masked Bee</string>
    <string name="oblong_wool_carder_bee">Oblong Wool-Carder Bee</string>
    <string name="orange_tipped_wood_digger_bee">Orange-Tipped Wood Digger Bee</string>
    <string name="pugnacious_leafcutter_bee">Pugnacious Leafcutter Bee</string>
    <string name="pure_green_sweat_bee">Pure Green Sweat Bee</string>
    <string name="sculptured_resin_bee">Sculptured Resin Bee</string>
    <string name="silver_tailed_petalcutter_bee">Silver-Tailed Petalcutter Bee</string>
    <string name="small_carpenter_bees">Small Carpenter Bees</string>
    <string name="small_mason_bees">Small Mason Bees</string>
    <string name="small_resin_bees">Small Resin Bees</string>
    <string name="small_sweat_bees">Small Sweat Bees</string>
    <string name="small_handed_leafcutter_bee">Small-Handed Leafcutter Bee</string>
    <string name="taurus_mason_bee">Taurus Mason Bee</string>
    <string name="unarmed_leafcutter_bee">Unarmed Leafcutter Bee</string>
    <string name="common_pill_woodlouse">Common Pill Woodlouse</string>
    <string name="house_centipede">House Centipede</string>
    <string name="millipedes">Millipedes</string>
    <string name="transverse_banded_flower_fly">Transverse-Banded Flower Fly</string>
    <string name="others">Others</string>
    <string name="western_honey_bee">Western Honey Bee</string>
    <string name="menu">Menu</string>
    <string name="about">About</string>
    <string name="key_chars">Key Chars</string>
    <string name="plants">Plants</string>
    <string name="description">Description</string>
    <string name="technical_name">Technical Name</string>
    <string name="email">Email</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_into_existing_account">Sign into Existing Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="password_reset">Password Reset</string>
    <string name="pollination_project">PolliNation Project</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="contact">Contact</string>
    <string name="account">Account</string>
    <string name="info">Info</string>
    <string name="priv_policy_info">Please see the link below for more information regarding our Privicy Policy</string>
    <string name="priv_policy_link"><a href="https://acrobat.adobe.com/link/track?uri=urn:aaid:scds:US:c5280dcd-c2a2-3ce7-bc08-fbf9ff9e000b">Click here for our Privacy Policy</a></string>
    <string name="back_to_menu"><![CDATA[< Menu]]></string>
    <string name="TC_info">Please see the link below for more information regarding our Terms and Conditions</string>
    <string name="TC_Hyperlink"><a href="https://acrobat.adobe.com/link/track?uri=urn:aaid:scds:US:f998e772-8be0-38e9-b0df-d013d52bd444">Click here for our Terms and Conditions</a></string>
    <string name="title_activity_contacts">ContactsActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="contacts_info">Students from the University of Michigan-Dearborn created, developed, and currently run the PolliNation Project. If you have any questions regarding the app or the PolliNation Project, please email:</string>
    <string name="contacts_hyperlink"><a href="PollinationProject@umich.edu">PollinationProject@umich.edu</a></string>
    <string name="camera">Camera</string>
    <string name="select_photo_source">Select Photo Source</string>
    <string name="library">Library</string>
    <string name="photo_id">Photo ID</string>
    <string name="pick_date">Pick Date</string>
    <string name="where_did_you_see_the_pollinator">Where did you see the pollinator?</string>
    <string name="next">Next</string>
    <string name="enter_hotel">Enter Hotel</string>
    <string name="title_forgot_password">RESET PASSWORD</string>
    <string name="forgot_password_title_description">Please enter E-mail and link will be sent to reset the password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="et_hint_email_id">Enter E-mail</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="login__pollination">Login to Pollination </string>
    <string name="PoliProjectInfo1">Bees and other pollinators are disappearing around the globe. Major threats to pollinators include habitat loss and fragmentation, pollution and pesticides, and the spread of invasive species and diseases.</string>
    <string name="PoliProjectInfo2">Over the past 70 years, the United States has experienced a dramatic decline in honey bee colonies from about 5.9 million in 1947 to just 2.7 million in 2017—a 55% reduction. A surveyor from Michigan State University found population numbers for half of Michigan’s bumblebee species have declined by 50% or more.</string>
    <string name="PoliProjectInfo3">Pollinators, such as bees, birds, beetles, and butterflies, are vital organisms for pollination of wild plant species and crops, such as apples, blueberries, and almonds. In fact, it is estimated that one out of every three bites of food we eat and nearly 90% of Earth’s flowering plants depend on insect pollination. In the US alone, honeybees are responsible for pollinating $10 billion worth of crops annually.</string>
    <string name="PoliProjectInfo4">The message is clear: we need to act. The PolliNation Project is a campus and community-wide initiative to build insect hotels in order to promote pollinator awareness and conservation. Check out the <a href="https://www.youtube.com/watch?v=UP1SQ2c78JQ">PolliNation You Tube video</a> for an overview of the project\'s goals and plans.</string>
    <string name="PoliProjecyHyperLink">For more information about the PolliNation Project, check out the PolliNation website located <a href="https://umdearborn.edu/environmental-interpretive-center/education-programs/pollination-project">here.</a></string>
    <string name="PoliProjectHyperLink2">Download our sister app, <a href="https://play.google.com/store/apps/details?id=edu.umich.PolliNationHotels">PolliNation Hotels</a> to upload and view information about pollinators visiting southeast MI insect hotels.</string>
    <string name="place_holder">PLACE HOLDER</string>
    <string name="this_is_my_pollinator">This is my Pollinator</string>
    <string name="title_activity_possible_photo_pollinator">PossiblePhotoPollinatorActivity</string>
    <string name="submit_pollinator">Submit Pollinator</string>
    <string name="model_predict">modelPredict</string>
    <string name="metallic_bluish_green_cucukoo_nwasp">Metallic Bluish Green Cucukoo\nWasp</string>
    <string name="key_traits">Key Traits</string>
    <string name="hornets_and_yellowjackets">Hornets and Yellowjackets</string>
</resources>