<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:label="@string/pollinator_categories"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".PolinationProjectActivity">

            <TextView
                android:id="@+id/PoliProjectTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pollination_project"
                android:textSize="45dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/PoliProjectImg"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PoliProjectTitle"
                app:srcCompat="@drawable/pollination_logo" />

            <TextView
                android:id="@+id/PoliProjectInfo1"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/PoliProjectInfo1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/PoliProjectImg"
                app:layout_constraintTop_toBottomOf="@+id/PoliProjectTitle" />

            <TextView
                android:id="@+id/PoliProjectInfo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:text="@string/PoliProjectInfo2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PoliProjectTitle" />

            <TextView
                android:id="@+id/PoliProjectInfo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/PoliProjectInfo3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PoliProjectInfo2" />

            <TextView
                android:id="@+id/PoliProjectInfo4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:linksClickable="true"
                android:text="@string/PoliProjectInfo4"
                android:textColorLink="#0000FF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PoliProjectInfo3" />

            <TextView
                android:id="@+id/PoliProjectHyperLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:linksClickable="true"
                android:text="@string/PoliProjecyHyperLink"
                android:textColorLink="#0000FF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PoliProjectInfo4" />

            <TextView
                android:id="@+id/PoliProjectHyperLink2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:text="@string/PoliProjectHyperLink2"
                android:textColorLink="#0000FF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PoliProjectHyperLink" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>