<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyPolicyActivity">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="100dp"
        android:layout_height="69dp"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:text="@string/back_to_menu"
        android:textColor="#0277BD"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPrivPolicyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:textSize="50sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPrivPolicyInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priv_policy_info"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrivPolicyTitle" />

    <TextView
        android:id="@+id/txtPrivPolicyHyperLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priv_policy_link"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColorLink="#0000FF"
        android:linksClickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrivPolicyInfo" />
</androidx.constraintlayout.widget.ConstraintLayout>