<?xml version="1.0" encoding="utf-8"?>
<!--  This is the menu page  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/fifthFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/menu"
        android:textColor="#306CB5"
        android:textSize="40sp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="410dp"
        android:layout_height="69dp"
        android:layout_margin="15dp"
        android:background="#16B2FF"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        app:backgroundTint="#16B2FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifthFragment"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/BtnPassReset"
        android:layout_width="410dp"
        android:layout_height="69dp"
        android:layout_margin="15dp"
        android:background="#16B2FF"
        android:text="@string/password_reset"
        android:textColor="@color/white"
        app:backgroundTint="#16B2FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignOut"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/BtnPNProject"
        android:layout_width="410dp"
        android:layout_height="69dp"
        android:layout_margin="15dp"
        android:background="#16B2FF"
        android:textColor="@color/white"
        app:backgroundTint="#16B2FF"
        tools:ignore="TextContrastCheck"
        android:text="@string/pollination_project"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnPassReset" />

    <Button
        android:id="@+id/BtnPrivPolicy"
        android:layout_width="410dp"
        android:layout_height="69dp"
        android:layout_margin="15dp"
        android:layout_marginTop="36dp"
        android:background="#16B2FF"
        android:text="@string/privacy_policy"
        android:textColor="@color/white"
        app:backgroundTint="#16B2FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnPNProject"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/BtnTC"
        android:layout_width="410dp"
        android:layout_height="69dp"
        android:layout_margin="15dp"
        android:layout_marginTop="200dp"
        android:background="#16B2FF"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/white"
        app:backgroundTint="#16B2FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnPrivPolicy"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/BtnContact"
        android:layout_width="410dp"
        android:layout_height="69dp"
        android:layout_margin="15dp"
        android:background="#16B2FF"
        android:text="Contact"
        android:textColor="@color/white"
        app:backgroundTint="#16B2FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnTC"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>