<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <Button
        android:id="@+id/myPoliaboutButton"
        android:layout_width="125dp"
        android:layout_height="90dp"
        android:backgroundTint="#FF306CB5"
        android:text="@string/about"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/myPolikeyCharButton"
        app:layout_constraintTop_toTopOf="@+id/myPolikeyCharButton" />

    <Button
        android:id="@+id/myPolikeyCharButton"
        android:layout_width="125dp"
        android:layout_height="90dp"
        android:backgroundTint="#FF306CB5"
        android:text="@string/key_chars"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/myPoliplantButton"
        android:layout_width="125dp"
        android:layout_height="90dp"
        android:backgroundTint="#FF306CB5"
        android:text="@string/plants"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/myPolikeyCharButton"
        app:layout_constraintTop_toTopOf="@+id/myPolikeyCharButton" />

    <HorizontalScrollView
        android:id="@+id/myPolihorizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/myPoliexploreimage1"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_marginStart="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_black_camera_foreground" />

            <ImageView
                android:id="@+id/myPoliexploreimage2"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_marginStart="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/myPoliexploreimage1"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_black_camera_foreground" />

            <ImageView
                android:id="@+id/myPoliexploreimage3"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_marginStart="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/myPoliexploreimage2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_black_camera_foreground" />

            <ImageView
                android:id="@+id/myPoliexploreimage4"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/myPoliexploreimage3"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_black_camera_foreground" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>

    <ScrollView
        android:id="@+id/myPoliscrollView2"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        app:layout_constraintBottom_toTopOf="@id/myPollinatorButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myPolihorizontalScrollView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/myPolilinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/myPoliExploreDescription_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/myPoliExplore_technicalName_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/technical_name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/myPollinatorButton"
        android:layout_width="378dp"
        android:layout_height="64dp"
        android:backgroundTint="#FF306CB5"
        android:text="@string/this_is_my_pollinator"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myPoliscrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>